welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: not found: value aComter
  else{aComter=3}
       ^