welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
  var aCompter=nums.length-4
  if (aCompter<0){aCompter=nums.length-1}
  else{aComter=3}
  for(i<- 0 to aCompter){
    if( nums(i)==9){return true}
   
  }
  return false;
}